[tool.poetry]
name = "pypkgs_ml"
version = "0.1.0"
description = "a very simple python package for DSCI-524 individual assignment"
authors = ["Mai Le <lephanthuymai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
